# piv

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md
docs/: architecture.md
docs/adr/: 0001-store-product-and-architecture-docs-in-repo.md  README.md
docs/prd/: 2026-07-02-code-pane-refactor-and-flat-ui.md  2026-07-03-file-intake-seam.md  2026-07-04-prd-issue-tracker.md  2026-07-04-prd-tracker-reading-and-status-ui.md  README.md  TEMPLATE.md
src/: app.rs  cli.rs  code_pane.rs  control.rs  diff.rs  file_intake.rs  highlight.rs  issue_cockpit.rs  lib.rs  main.rs  model.rs  search.rs  tracker.rs  tracker_rpc.rs  tracker_ui.rs  ui.rs  watcher.rs
tests/: file_intake.rs  issue_cockpit.rs  tracker_rpc.rs  tracker_socket.rs  tracker_store.rs  tracker_ui.rs
